test/tests/diagnostics/ast_syntax_01f/jastadd.err.expected
Error at tests/diagnostics/ast_syntax_01f/Test.ast:2:1: unexpected token "*":
***;
^
